@@ -1,3 +1,7 @@
+Fri Jun 27 11:06:05 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/un.rb (wait_writable): added help message.
+
 Fri Jun 27 06:52:54 2008  Koichi Sasada  <ko1@atdot.net>
 
 	* configure.in: need a ",".
